# aesthetics-wiki-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/aesthetics_wiki_mcp/: __init__.py  server.py
