[project]
name = "aesthetics-wiki-mcp"
version = "0.2.0"
description = "MCP server for the Aesthetics Wiki (aesthetics.fandom.com). Search, read, and discover aesthetics from your LLM."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Leonardo Cametti" }]
keywords = ["mcp", "model-context-protocol", "aesthetics", "fandom", "wiki", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/leonardoca1/aesthetics-wiki-mcp"
Repository = "https://github.com/leonardoca1/aesthetics-wiki-mcp"
Issues = "https://github.com/leonardoca1/aesthetics-wiki-mcp/issues"

[project.scripts]
aesthetics-wiki-mcp = "aesthetics_wiki_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aesthetics_wiki_mcp"]
